# optimism

./: .buildinfo  .coveragerc  .gitignore  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  optimism.contact.html  optimism.contact.test.html  optimism.html  optimism.material.html  optimism.material.test.html  optimism.phasefield.html  optimism.phasefield.test.html  optimism.test.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  spack.yaml
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt  optimism.contact.rst.txt  optimism.contact.test.rst.txt  optimism.material.rst.txt  optimism.material.test.rst.txt  optimism.phasefield.rst.txt  optimism.phasefield.test.rst.txt  optimism.rst.txt  optimism.test.rst.txt
examples/: .gitignore
optimism/: AlSolver.py  BoundConstrainedObjective.py  BoundConstrainedSolver.py  ConstrainedObjective.py  Domain.py  EquationSolver.py  EquationSolverSubspace.py  EquationSolver_Immersed_2.py  ExodusWriter.py  FieldEvaluator.py  FieldOperator.py  FunctionSpace.py  IncompleteCholesky.py  Interpolants.py  J2PlasticPhaseField.py  JaxConfig.py  LU.py  LinAlg.py  Math.py  Mechanics.py  Mesh.py  MeshPlot.py  MinimizeScalar.py  NewFunctionSpace.py  NewtonSolver.py  Objective.py  PostProcessor.py  Problem.py  QuadratureRule.py  ReadExodusMesh.py  ReadMesh.py  ScalarRootFind.py  ScipyInterface.py  SmoothFunctions.py  SparseCholesky.py  SparseMatrixAssembler.py  Surface.py  TensorMath.py  Timer.py  TractionBC.py  (+5 more)
test/: ShearProblem_DOF.py  TestFixture.py  read_material_property_test.exo  (+21 more)
(+687 files in other folders)
